Fix bug for indent reference-style link syntax sentence Separate indentation function (create indent_helper repository)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hmd",
-  "version": "0.2.8d",
+  "version": "0.2.8.1",
   "author": {
     "name": "ricale",
     "email": "ricale@ricalest.net"
