--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lemon-juice",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "author": {
     "name": "ricale",
-    "email": "ricale@ricalest.net"
+    "email": "kim.kangseong@gmail.com"
   },
   "licenses": [
     {
